--- a/MarketCurlyB/MarketCurlyB/Base.lproj/Main.storyboard
+++ b/MarketCurlyB/MarketCurlyB/Base.lproj/Main.storyboard
@@ -408,7 +408,7 @@
         <!--Ask View Controller-->
         <scene sceneID="g0P-wW-pdg">
             <objects>
-                <viewController storyboardIdentifier="askViewController" id="Zrp-NW-wpN" customClass="askViewController" customModule="MarketCurlyB" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="askViewController" modalPresentationStyle="fullScreen" id="Zrp-NW-wpN" customClass="askViewController" customModule="MarketCurlyB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4fg-hd-FMb">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -472,17 +472,108 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UyD-Hj-VoF">
-                                <rect key="frame" x="-20" y="98" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UyD-Hj-VoF">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <items>
-                                    <navigationItem title="Title" id="SX1-xg-NGB"/>
+                                    <navigationItem title="상품문의" id="SX1-xg-NGB">
+                                        <barButtonItem key="leftBarButtonItem" image="chevron.left" catalog="system" id="mt7-wt-ZFO">
+                                            <color key="tintColor" systemColor="labelColor"/>
+                                            <connections>
+                                                <action selector="close:" destination="fAo-HH-gxA" id="MIA-m2-7pr"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
                                 </items>
                             </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TC0-fX-Cpk">
+                                <rect key="frame" x="20" y="108" width="374" height="21.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="제목을 입력해주세요" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OZI-fX-Ew4">
+                                <rect key="frame" x="20" y="149.5" width="374" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="CF1-Mp-H6g"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="내용을 입력해주세요" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JgY-6S-rzC">
+                                <rect key="frame" x="20" y="219.5" width="374" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="xIV-kZ-wI9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wl3-nE-aTA">
+                                <rect key="frame" x="20" y="433" width="374" height="50"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="ItO-Xm-AgD"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="등록"/>
+                                <connections>
+                                    <action selector="makeAsk:" destination="fAo-HH-gxA" eventType="touchUpInside" id="aYz-BY-gaD"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XKe-s8-lRw">
+                                <rect key="frame" x="20" y="389.5" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="adT-8R-xlg"/>
+                                    <constraint firstAttribute="width" secondItem="XKe-s8-lRw" secondAttribute="height" multiplier="1:1" id="zxz-I6-Bkv"/>
+                                </constraints>
+                                <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain">
+                                    <imageReference key="image" image="checkmark" catalog="system" symbolScale="medium"/>
+                                </buttonConfiguration>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="비밀글로 문의하기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xoa-XP-19i">
+                                <rect key="frame" x="60" y="396" width="101" height="17"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Vlk-Kx-kv9"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="OZI-fX-Ew4" firstAttribute="top" secondItem="TC0-fX-Cpk" secondAttribute="bottom" constant="20" id="7To-y6-EoC"/>
+                            <constraint firstItem="wl3-nE-aTA" firstAttribute="centerX" secondItem="7LI-RZ-cKk" secondAttribute="centerX" id="7ZC-Hx-PkA"/>
+                            <constraint firstItem="UyD-Hj-VoF" firstAttribute="top" secondItem="Vlk-Kx-kv9" secondAttribute="top" id="DfT-ZZ-sF1"/>
+                            <constraint firstItem="OZI-fX-Ew4" firstAttribute="leading" secondItem="Vlk-Kx-kv9" secondAttribute="leading" constant="20" id="Eu1-qZ-ZsE"/>
+                            <constraint firstItem="wl3-nE-aTA" firstAttribute="top" secondItem="xoa-XP-19i" secondAttribute="bottom" constant="20" id="J0P-dn-PVq"/>
+                            <constraint firstItem="Vlk-Kx-kv9" firstAttribute="trailing" secondItem="JgY-6S-rzC" secondAttribute="trailing" constant="20" id="JRw-cx-39R"/>
+                            <constraint firstItem="JgY-6S-rzC" firstAttribute="centerX" secondItem="7LI-RZ-cKk" secondAttribute="centerX" id="PkC-LN-R2k"/>
+                            <constraint firstItem="Vlk-Kx-kv9" firstAttribute="trailing" secondItem="UyD-Hj-VoF" secondAttribute="trailing" id="T6i-kZ-Nlg"/>
+                            <constraint firstItem="Vlk-Kx-kv9" firstAttribute="trailing" secondItem="TC0-fX-Cpk" secondAttribute="trailing" constant="20" id="ZYp-zx-RPM"/>
+                            <constraint firstItem="Vlk-Kx-kv9" firstAttribute="trailing" secondItem="OZI-fX-Ew4" secondAttribute="trailing" constant="20" id="Ze9-Ur-48g"/>
+                            <constraint firstItem="xoa-XP-19i" firstAttribute="centerY" secondItem="XKe-s8-lRw" secondAttribute="centerY" id="bgQ-VZ-MmC"/>
+                            <constraint firstItem="XKe-s8-lRw" firstAttribute="top" secondItem="JgY-6S-rzC" secondAttribute="bottom" constant="20" id="cV7-ek-xhV"/>
+                            <constraint firstItem="TC0-fX-Cpk" firstAttribute="centerX" secondItem="7LI-RZ-cKk" secondAttribute="centerX" id="cvg-rV-Hqw"/>
+                            <constraint firstItem="wl3-nE-aTA" firstAttribute="leading" secondItem="Vlk-Kx-kv9" secondAttribute="leading" constant="20" id="mlL-zL-f7o"/>
+                            <constraint firstItem="XKe-s8-lRw" firstAttribute="leading" secondItem="JgY-6S-rzC" secondAttribute="leading" id="njG-gw-Qn6"/>
+                            <constraint firstItem="UyD-Hj-VoF" firstAttribute="leading" secondItem="7LI-RZ-cKk" secondAttribute="leading" id="opG-6s-Z4X"/>
+                            <constraint firstItem="Vlk-Kx-kv9" firstAttribute="trailing" secondItem="wl3-nE-aTA" secondAttribute="trailing" constant="20" id="sji-Ch-v4t"/>
+                            <constraint firstItem="xoa-XP-19i" firstAttribute="leading" secondItem="XKe-s8-lRw" secondAttribute="trailing" constant="10" id="sl7-W7-4Vf"/>
+                            <constraint firstItem="JgY-6S-rzC" firstAttribute="leading" secondItem="Vlk-Kx-kv9" secondAttribute="leading" constant="20" id="uIj-CY-5uc"/>
+                            <constraint firstItem="OZI-fX-Ew4" firstAttribute="centerX" secondItem="7LI-RZ-cKk" secondAttribute="centerX" id="uJG-Pz-aIL"/>
+                            <constraint firstItem="TC0-fX-Cpk" firstAttribute="leading" secondItem="Vlk-Kx-kv9" secondAttribute="leading" constant="20" id="v44-Cz-STk"/>
+                            <constraint firstItem="JgY-6S-rzC" firstAttribute="top" secondItem="OZI-fX-Ew4" secondAttribute="bottom" constant="20" id="y0l-Yk-dup"/>
+                            <constraint firstItem="TC0-fX-Cpk" firstAttribute="top" secondItem="UyD-Hj-VoF" secondAttribute="bottom" constant="20" id="yO9-Ak-ar9"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="checkButton" destination="XKe-s8-lRw" id="Ing-gc-o6t"/>
+                        <outlet property="makeButton" destination="wl3-nE-aTA" id="vup-XU-OlH"/>
+                        <outlet property="productLabel" destination="TC0-fX-Cpk" id="jLL-iF-vyk"/>
+                        <outlet property="sentenceTextField" destination="JgY-6S-rzC" id="1zx-TU-vaf"/>
+                        <outlet property="titleTextField" destination="OZI-fX-Ew4" id="he1-AQ-EKB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pQl-JH-Kod" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -491,7 +582,7 @@
         <!--Product Explain View Controller-->
         <scene sceneID="tOU-bM-hN3">
             <objects>
-                <viewController storyboardIdentifier="productExplainViewController" id="Gc8-VI-bv5" customClass="productExplainViewController" customModule="MarketCurlyB" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="productExplainViewController" modalPresentationStyle="fullScreen" id="Gc8-VI-bv5" customClass="productExplainViewController" customModule="MarketCurlyB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YtO-Xq-N8D">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
