--- a/MarketCurlyB/MarketCurlyB/Base.lproj/Main.storyboard
+++ b/MarketCurlyB/MarketCurlyB/Base.lproj/Main.storyboard
@@ -2117,8 +2117,8 @@
                                                             <constraint firstAttribute="width" secondItem="Mpx-EC-HeM" secondAttribute="height" multiplier="49:48" id="uSq-mZ-EAl"/>
                                                         </constraints>
                                                     </imageView>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Id1-Yu-wHv">
-                                                        <rect key="frame" x="89" y="31.5" width="305" height="25.5"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Id1-Yu-wHv">
+                                                        <rect key="frame" x="89" y="44" width="305" height="0.0"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
